--- a/proyecto-2/tmp.tex
+++ b/proyecto-2/tmp.tex
@@ -26,6 +26,11 @@
 
 
 
+\begin{frame}
+\textbf{SCHEDULABILITY TEST RESULTS} 
+\newline  RM test: FAILED, u=0,900000 is greater than U:0,779763 \\ 
+EDF test: PASSED  
+\end{frame}
 
 
 
@@ -42,12 +47,59 @@
 
 
 
+\begin{frame}
+EARLIEST DEADLINE FIRST -
+\begin{table}[]
+\resizebox{\textwidth}{!}{
+\begin{tabular}{|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|} 
+\hline 
+T &1 &2 &3 &4 &5 &6 &7 &8 &9 &10 &11 &12 &13 &14 &15 &16 &17 &18 &19 &20 &21 &22 &23 &24 &25 &26 &27 &28 &29 &30 \\ \hline 
+1 &$\textcolor{black}{\blacksquare}$ & & & & & &$\textcolor{black}{\blacksquare}$ & & & &$\textcolor{black}{\blacksquare}$ & & & & & &$\textcolor{black}{\blacksquare}$ & & & & &$\textcolor{black}{\blacksquare}$ & & & &$\textcolor{black}{\blacksquare}$ & & & & \\ 2 & & & & &$\textcolor{red}{\blacksquare}$ &$\textcolor{red}{\blacksquare}$ & & & & & &$\textcolor{red}{\blacksquare}$ & & & &$\textcolor{red}{\blacksquare}$ & & & & & & &$\textcolor{red}{\blacksquare}$ &$\textcolor{red}{\blacksquare}$ & & & & & & \\ 3 & &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ & & & &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ & & &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ & & & &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ & & & &$\textcolor{blue}{\blacksquare}$ & &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ & & \\ 
+\hline
+\end{tabular}
+}
+\end{table}
 
 
 
 
 
 
+
+
+
+RATE MONOTONIC - 
+\begin{table}[]
+\resizebox{\textwidth}{!}{
+\begin{tabular}{|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|} 
+\hline 
+T &1 &2 &3 &4 &5 &6 &7 &8 &9 &10 &11 &12 &13 &14 &15 &16 &17 &18 &19 &20 &21 &22 &23 &24 &25 &26 &27 &28 &29 &30 \\ \hline 
+1 &$\textcolor{black}{\blacksquare}$ & & & & &$\textcolor{black}{\blacksquare}$ & & & & &$\textcolor{black}{\blacksquare}$ & & & & &$\textcolor{black}{\blacksquare}$ & & & & &$\textcolor{black}{\blacksquare}$ & & & & &$\textcolor{black}{\blacksquare}$ & & & & \\ 2 & & & & &$\textcolor{red}{\blacksquare}$ & & & & &$\textcolor{red}{\blacksquare}$ & &$\textcolor{red}{\blacksquare}$ & & & & &$\textcolor{red}{\blacksquare}$ & & & & & &$\textcolor{red}{\blacksquare}$ &$\textcolor{red}{\blacksquare}$ & & & & & & \\ 3 & &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ & & &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ & & & &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ & & & &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ & &$\textcolor{blue}{\blacksquare}$ & & &$\textcolor{blue}{\blacksquare}$ & &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ & & \\ 
+\hline
+\end{tabular}
+}
+\end{table}
+
+
+
+
+
+
+
+
+
+LEAST LAXITY FIRST - 
+\begin{table}[]
+\resizebox{\textwidth}{!}{
+\begin{tabular}{|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|} 
+\hline 
+T &1 &2 &3 &4 &5 &6 &7 &8 &9 &10 &11 &12 &13 &14 &15 &16 &17 &18 &19 &20 &21 &22 &23 &24 &25 &26 &27 &28 &29 &30 \\ \hline 
+1 & &$\textcolor{black}{\blacksquare}$ & & & & &$\textcolor{black}{\blacksquare}$ & & & &$\textcolor{black}{\blacksquare}$ & & & & & &$\textcolor{black}{\blacksquare}$ & & & & &$\textcolor{black}{\blacksquare}$ & & & & &$\textcolor{black}{\blacksquare}$ & & & \\ 2 & & & & &$\textcolor{red}{\blacksquare}$ &$\textcolor{red}{\blacksquare}$ & & & & & &$\textcolor{red}{\blacksquare}$ & & & &$\textcolor{red}{\blacksquare}$ & & & & & & &$\textcolor{red}{\blacksquare}$ &$\textcolor{red}{\blacksquare}$ & & & & & & \\ 3 &$\textcolor{blue}{\blacksquare}$ & &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ & & & &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ & & &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ & & & &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ & & & &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ & &$\textcolor{blue}{\blacksquare}$ & & \\ 
+\hline
+\end{tabular}
+}
+\end{table}
+\end{frame}
 
 
 
