--- a/proyecto-2/tmp.tex
+++ b/proyecto-2/tmp.tex
@@ -28,7 +28,7 @@
 
 \begin{frame}
 \textbf{SCHEDULABILITY TEST RESULTS} 
-\newline  RM test: FAILED, u=0,900000 is greater than U:0,779763 \\ 
+\newline  RM test: FAILED, u=0,944444 is greater than U:0,828427 \\ 
 EDF test: PASSED  
 \end{frame}
 
@@ -51,14 +51,15 @@ EDF test: PASSED
 EARLIEST DEADLINE FIRST -
 \begin{table}[]
 \resizebox{\textwidth}{!}{
-\begin{tabular}{|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|} 
+\begin{tabular}{|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|} 
 \hline 
-T &1 &2 &3 &4 &5 &6 &7 &8 &9 &10 &11 &12 &13 &14 &15 &16 &17 &18 &19 &20 &21 &22 &23 &24 &25 &26 &27 &28 &29 &30 \\ \hline 
-1 &$\textcolor{black}{\blacksquare}$ & & & & & &$\textcolor{black}{\blacksquare}$ & & & &$\textcolor{black}{\blacksquare}$ & & & & & &$\textcolor{black}{\blacksquare}$ & & & & &$\textcolor{black}{\blacksquare}$ & & & &$\textcolor{black}{\blacksquare}$ & & & & \\ 2 & & & & &$\textcolor{red}{\blacksquare}$ &$\textcolor{red}{\blacksquare}$ & & & & & &$\textcolor{red}{\blacksquare}$ & & & &$\textcolor{red}{\blacksquare}$ & & & & & & &$\textcolor{red}{\blacksquare}$ &$\textcolor{red}{\blacksquare}$ & & & & & & \\ 3 & &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ & & & &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ & & &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ & & & &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ & & & &$\textcolor{blue}{\blacksquare}$ & &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ & & \\ 
+T &1 &2 &3 &4 &5 &6 &7 &8 &9 &10 &11 &12 &13 &14 &15 &16 &17 &18 \\ \hline 
+1 &$\textcolor{black}{\blacksquare}$ &$\textcolor{black}{\blacksquare}$ &$\textcolor{black}{\blacksquare}$ & & & & &$\textcolor{black}{\blacksquare}$ &$\textcolor{black}{\blacksquare}$ &$\textcolor{black}{\blacksquare}$ & & &$\textcolor{black}{\blacksquare}$ &$\textcolor{black}{\blacksquare}$ &$\textcolor{black}{\blacksquare}$ & & & \\ 2 & & & &$\textcolor{red}{\blacksquare}$ &$\textcolor{red}{\blacksquare}$ &$\textcolor{red}{\blacksquare}$ &$\textcolor{red}{\blacksquare}$ & & & &$\textcolor{red}{\blacksquare}$ &$\textcolor{red}{\blacksquare}$ & & & &$\textcolor{red}{\blacksquare}$ &$\textcolor{red}{\blacksquare}$ & \\ 
 \hline
 \end{tabular}
 }
 \end{table}
+\end{frame}
 
 
 
@@ -68,17 +69,19 @@ T &1 &2 &3 &4 &5 &6 &7 &8 &9 &10 &11 &12 &13 &14 &15 &16 &17 &18 &19 &20 &21 &22
 
 
 
-RATE MONOTONIC - 
+\begin{frame}
+RATE MONOTONIC -  \textcolor{red}{DEADLINE NOT MET}
 \begin{table}[]
 \resizebox{\textwidth}{!}{
-\begin{tabular}{|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|} 
+\begin{tabular}{|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|} 
 \hline 
-T &1 &2 &3 &4 &5 &6 &7 &8 &9 &10 &11 &12 &13 &14 &15 &16 &17 &18 &19 &20 &21 &22 &23 &24 &25 &26 &27 &28 &29 &30 \\ \hline 
-1 &$\textcolor{black}{\blacksquare}$ & & & & &$\textcolor{black}{\blacksquare}$ & & & & &$\textcolor{black}{\blacksquare}$ & & & & &$\textcolor{black}{\blacksquare}$ & & & & &$\textcolor{black}{\blacksquare}$ & & & & &$\textcolor{black}{\blacksquare}$ & & & & \\ 2 & & & & &$\textcolor{red}{\blacksquare}$ & & & & &$\textcolor{red}{\blacksquare}$ & &$\textcolor{red}{\blacksquare}$ & & & & &$\textcolor{red}{\blacksquare}$ & & & & & &$\textcolor{red}{\blacksquare}$ &$\textcolor{red}{\blacksquare}$ & & & & & & \\ 3 & &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ & & &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ & & & &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ & & & &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ & &$\textcolor{blue}{\blacksquare}$ & & &$\textcolor{blue}{\blacksquare}$ & &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ & & \\ 
+T &1 &2 &3 &4 &5 &6 &7 &8 &9 &10 &11 &12 &13 &14 &15 &16 &17 &18 \\ \hline 
+1 &$\textcolor{black}{\blacksquare}$ &$\textcolor{black}{\blacksquare}$ &$\textcolor{black}{\blacksquare}$ & & & &$\textcolor{black}{\blacksquare}$ &$\textcolor{black}{\blacksquare}$ &$\textcolor{black}{\blacksquare}$ & & & & & & & & & \\ 2 & & & &$\textcolor{red}{\blacksquare}$ &$\textcolor{red}{\blacksquare}$ &$\textcolor{red}{\blacksquare}$ & & & & & & & & & & & & \\ 
 \hline
 \end{tabular}
 }
 \end{table}
+\end{frame}
 
 
 
@@ -88,13 +91,14 @@ T &1 &2 &3 &4 &5 &6 &7 &8 &9 &10 &11 &12 &13 &14 &15 &16 &17 &18 &19 &20 &21 &22
 
 
 
+\begin{frame}
 LEAST LAXITY FIRST - 
 \begin{table}[]
 \resizebox{\textwidth}{!}{
-\begin{tabular}{|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|} 
+\begin{tabular}{|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|} 
 \hline 
-T &1 &2 &3 &4 &5 &6 &7 &8 &9 &10 &11 &12 &13 &14 &15 &16 &17 &18 &19 &20 &21 &22 &23 &24 &25 &26 &27 &28 &29 &30 \\ \hline 
-1 & &$\textcolor{black}{\blacksquare}$ & & & & &$\textcolor{black}{\blacksquare}$ & & & &$\textcolor{black}{\blacksquare}$ & & & & & &$\textcolor{black}{\blacksquare}$ & & & & &$\textcolor{black}{\blacksquare}$ & & & & &$\textcolor{black}{\blacksquare}$ & & & \\ 2 & & & & &$\textcolor{red}{\blacksquare}$ &$\textcolor{red}{\blacksquare}$ & & & & & &$\textcolor{red}{\blacksquare}$ & & & &$\textcolor{red}{\blacksquare}$ & & & & & & &$\textcolor{red}{\blacksquare}$ &$\textcolor{red}{\blacksquare}$ & & & & & & \\ 3 &$\textcolor{blue}{\blacksquare}$ & &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ & & & &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ & & &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ & & & &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ & & & &$\textcolor{blue}{\blacksquare}$ &$\textcolor{blue}{\blacksquare}$ & &$\textcolor{blue}{\blacksquare}$ & & \\ 
+T &1 &2 &3 &4 &5 &6 &7 &8 &9 &10 &11 &12 &13 &14 &15 &16 &17 &18 \\ \hline 
+1 &$\textcolor{black}{\blacksquare}$ &$\textcolor{black}{\blacksquare}$ &$\textcolor{black}{\blacksquare}$ & & & & &$\textcolor{black}{\blacksquare}$ &$\textcolor{black}{\blacksquare}$ &$\textcolor{black}{\blacksquare}$ & & &$\textcolor{black}{\blacksquare}$ &$\textcolor{black}{\blacksquare}$ & &$\textcolor{black}{\blacksquare}$ & & \\ 2 & & & &$\textcolor{red}{\blacksquare}$ &$\textcolor{red}{\blacksquare}$ &$\textcolor{red}{\blacksquare}$ &$\textcolor{red}{\blacksquare}$ & & & &$\textcolor{red}{\blacksquare}$ &$\textcolor{red}{\blacksquare}$ & & &$\textcolor{red}{\blacksquare}$ & &$\textcolor{red}{\blacksquare}$ & \\ 
 \hline
 \end{tabular}
 }
